# fleet_adapter_ecobot

./: README.md  config.yaml  package.xml  requirements.txt  setup.cfg  setup.py
configs/: robot_config.yaml  test_api_config.yaml
fleet_adapter_ecobot/: EcobotClientAPI.py  EcobotCommandHandle.py  TestClientAPI.py  clicked_point_transform.py  ecobot_sim_server.py  fleet_adapter_ecobot.py  test_ecobot_client_methods.py  utils.py
